# MWAddonRandomizer

./: .clang-format  .gitignore  CMakeLists.txt  MorrowindAddonRandomizerCpp.kdev4  README.md  esmloader.cpp  esmloader.hpp  iohelpers.cpp  iohelpers.hpp  main.cpp  randomizer.cpp  records.cpp  records.hpp  settings.cpp  settings.hpp
doc/: Ingredients_IDs.txt  Ingredients_data.txt  mw_esm.txt
esmtools/: esmloader.cpp  esmwriter.cpp  esmwriter.hpp
randomizers/: weapons.cpp  weapons.hpp
src/: iohelpers.cpp  iohelpers.hpp  main.cpp  randomizer.cpp  randomizer.hpp  records.cpp  records.hpp  settings.cpp  settings.hpp
src/esmtools/: esmloader.cpp  esmloader.hpp  esmwriter.cpp  esmwriter.hpp
src/globals/: attributes.cpp  attributes.hpp  globals.hpp  magiceffects.cpp  magiceffects.hpp  skills.cpp  skills.hpp
src/randomizers/: alchemy.cpp  alchemy.hpp  artifacts.cpp  artifacts.hpp  weapons.cpp  weapons.hpp
